# adaptation-metrics

./: README.md  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: conf.py
docs/source/api/: data_selector.rst  vocab_augmentor.rst
docs/source/api/data_selection_metrics/: diversity.rst  index.rst  similarity.rst
docs/source/content/: domain_adaptation_components.rst  installation.rst
notebooks/: Copy_of_GuideToTransformersDomainAdaptation.ipynb  GuideToTransformersDomainAdaptation.ipynb  OriginalGuideToTransformersDomainAdaptation.ipynb  metric-design.ipynb
src/adaptation_metrics/: vocab_augmentor.py
src/adaptation_metrics/data_selection/: data_selector.py
src/adaptation_metrics/data_selection/metrics/: diversity.py  similarity.py
src/experimental/: random_data_selector.py
src/transformers_domain_adaptation/: vocab_augmentor.py
src/transformers_domain_adaptation/data_selection/: data_selector.py
src/transformers_domain_adaptation/data_selection/metrics/: diversity.py  similarity.py
src/utils/: iter.py  web.py
tests/unit_test/transformers_domain_adaptation/: test_vocab_augmentor.py
tests/unit_test/transformers_domain_adaptation/data_selection/: test_data_selector.py
