[tool.poetry]
name = "adaptation-metrics"
version = "0.4.1"
description = "Adapt Transformer-based language models to new text domains"
authors = ["Christopher Tee <chris@georgian.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.15"
transformers = "^4.31.0"
tokenizers = "^0.13.0"
pyarrow = "^12.0.1"
cchardet = "^2.1.7"
datasets = "^2.4.0"
pandas = "^1.4.0"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tqdm = "^4.49.0"
torch = "^2.0.0"
scikit-learn = "^3.0.0"
pytest-xdist = "^2.5.0"
hypothesis = "^6.54.4"
mypy = "^0.971"
black = "^22.6.0"
isort = "^5.10.1"
pycln = "^2.1.1"
pyupgrade = "^2.37.3"
pre-commit = "^2.20.0"
pydocstyle = "^6.1.1"
jupyterlab = "^3.4.5"
ipywidgets = "^8.0.1"
matplotlib = "^3.5.3"
twine = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers --cov src/adaptation_metrics --cov-report term-missing:skip-covered --no-cov-on-fail --cov-fail-under=75 --doctest-modules"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true

[tool.pycln]
all = true
